==> Mchaney3/AXSResearch/docs/Display/ILI9486/3.5inch_Arduino_Mega2560_16BIT_Module_ILI9486_MAR3513_V1.0/1-Demo/Demo_STM32/Demo_STM32F429IGT6_16BIT/HARDWARE/LCD/lcd.c <==
#include "lcd.h"
#include "stdlib.h"
#include "delay.h"

void LCD_GPIOInit(void)
{
		GPIO_InitTypeDef GPIO_Initure;
    
    __HAL_RCC_GPIOC_CLK_ENABLE();           //使能GPIOC时钟
		__HAL_RCC_GPIOE_CLK_ENABLE();           //使能GPIOE时钟
    
    GPIO_Initure.Pin=GPIO_PIN_10| GPIO_PIN_7|GPIO_PIN_8| GPIO_PIN_9;            //PC10,7,8,9
    GPIO_Initure.Mode=GPIO_MODE_OUTPUT_PP;  //推挽输出
    GPIO_Initure.Pull=GPIO_PULLUP;          //上拉
    GPIO_Initure.Speed=GPIO_SPEED_LOW;     //快速         
    HAL_GPIO_Init(GPIOC,&GPIO_Initure);     //初始化
		
		GPIO_Initure.Pin=GPIO_PIN_All;    //GPIOE
		HAL_GPIO_Init(GPIOE,&GPIO_Initure);     //初始化
}
